<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_lm</name>
  <version>0.1.0</version>
  <description>
    Gaze stabilization for the xArm6 using Levenberg-Marquardt IK (via MoveIt Servo).
    Keeps the end-effector fixed in world frame while the robot base is disturbed,
    using a closed-loop proportional controller feeding Cartesian velocity commands
    to MoveIt Servo whose damped-least-squares (LM) solver computes joint commands.
  </description>
  <maintainer email="joserogelioruiz12@gmail.com">roger</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
